--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ chkpts/
 data/cifar10/raw_data
 data/emnist/raw_data
 data/emnist/all_data
-
+logs_emnist/
 logs_cifar10/
 
 # Don't track files with these extensioons
