--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ chkpts/
 data/cifar10/raw_data
 data/emnist/raw_data
 data/emnist/all_data
-logs_emnist/
+logs_emnist/test
+logs_emnist/train
 logs_cifar10/
 
 # Don't track files with these extensioons
@@ -16,7 +17,7 @@ logs_cifar10/
 *.json
 *.txt
 *.pt
-
+*.png
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
